# 99-problems-haskell

./: func-class.cabal
app/: Main.hs  Problems.hs
